2003-03-03  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/kb.h :
	* kb/kb.cpp :

	  - Added another class to encapsulate all kb operations.

	* common/list.h :
	* common/list.cpp :
	* kb/symtab.h :
	* kb/symtab.cpp :

	  - Added a get() function to return the index of a particular data
	    item.

	  - symtab::length() now returns the length, not error codes.

	* kb/identifier.h :

	  - Added macro for checking basetypes.

	* parser/parser.y :

	  - Now uses kb instead of symtab.

	  - Added debug code for atoms.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :
	* kb/symtab.h :

	  - Added provisions for lists to have a name, entirely optional
	    but useful for debugging.

	* kb/symtab.cpp :

	  - Fixed bug that allows identifiers of the same name to be entered.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :

	  - Renamed del_i(), del_d(), get_i() and get_d() to del() and get().


2003-03-01  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/identifier.h :
	* kb/symtab.cpp :
	* kb/symtab.h :
	* parser/parser.y :

	  - Modified symtab so that identifiers are stored into 6
	    separate lists (sub, acc, obj, sub grp, etc). This will
	    make it easier to perform searches.

	* kb/Makefile.in :
	* kb/atom.h :
	* kb/atom.cpp :
	* kb/atomlist.h :
	* kb/atomlist.cpp :

	  - Removed unnecessary files.

	* docs/bnf.txt :
	* parser/parser.y :

	  - Renamed ground-atom-exp and comp-atom-exp to ground-atom
	    and comp-atom, respectively, for clarity.

2003-02-27  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* kb/atom.cpp :
	* kb/atom.h :

	  - Took out unnecessary constructors.

	  - Modified the verify() function to allow verification of ground
	    and non-ground atoms.

	  - A NULL ptr passed to cmp() will always cause false to be returned.

	  - Cleaned up cmp() and verify() functions.

	* kb/atomlist.cpp :
	* kb/atomlist.h :

	  - Added a ground indicator to allow or disallow non-ground atoms to
	    be added into the list.
